--- a/gradle.properties
+++ b/gradle.properties
@@ -8,8 +8,8 @@ pluginVersion = 0.0.2
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
-pluginSinceBuild = 221
-pluginUntilBuild = 221.*
+pluginSinceBuild = 222
+pluginUntilBuild = 222.*
 
 # IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
 platformType = IC
@@ -30,5 +30,5 @@ gradleVersion = 7.3
 # suppress inspection "UnusedProperty"
 kotlin.stdlib.default.dependency = false
 
-ideDir = /Users/afzal/Dev/Android Studio Electric Eel.app/Contents
+ideDir = /Users/afzal/Dev/Android Studio Flamingo Preview.app/Contents
 androidJarDir = /Users/afzal/Dev/SDKs/macos-android-sdk/platforms/android-28
