--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ pluginVersion = 0.0.2
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
 pluginSinceBuild = 222
-pluginUntilBuild = 222.*
+pluginUntilBuild = 223.*
 
 # IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
 platformType = IC
@@ -20,7 +20,7 @@ platformType = IC
 platformPlugins = android
 
 # Java language level used to compile sources and to generate the files for - Java 11 is required since 2020.3
-javaVersion = 11
+javaVersion = 17
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 7.3
@@ -30,5 +30,5 @@ gradleVersion = 7.3
 # suppress inspection "UnusedProperty"
 kotlin.stdlib.default.dependency = false
 
-ideDir = /Users/afzal/Dev/Android Studio Flamingo Preview.app/Contents
+ideDir = /Users/afzal/Dev/Android Studio Giraffe Preview.app/Contents
 androidJarDir = /Users/afzal/Dev/SDKs/macos-android-sdk/platforms/android-28
