--- a/gradle.properties
+++ b/gradle.properties
@@ -4,11 +4,11 @@
 pluginGroup = com.github.afzalive.firstintellijplugin
 pluginName = First-Intellij-Plugin
 # SemVer format -> https://semver.org
-pluginVersion = 0.0.2
+pluginVersion = 0.0.3
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
-pluginSinceBuild = 222
+pluginSinceBuild = 223
 pluginUntilBuild = 223.*
 
 # IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
@@ -23,12 +23,12 @@ platformPlugins = android
 javaVersion = 17
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
-gradleVersion = 7.3
+gradleVersion = 8.0.2
 
 # Opt-out flag for bundling Kotlin standard library.
 # See https://plugins.jetbrains.com/docs/intellij/kotlin.html#kotlin-standard-library for details.
 # suppress inspection "UnusedProperty"
 kotlin.stdlib.default.dependency = false
 
-ideDir = /Users/afzal/Dev/Android Studio Giraffe Preview.app/Contents
-androidJarDir = /Users/afzal/Dev/SDKs/macos-android-sdk/platforms/android-28
+ideDir = /Users/afzal/Dev/Android-Studio-Giraffe-Canary-9.app/Contents
+androidJarDir = /Users/afzal/Dev/SDKs/macos-android-sdk/platforms/android-33
