Compile with AS Giraffe Canary 11
Remove gct login dependency as it is now bundled in android plugin on AS

--- a/gradle.properties
+++ b/gradle.properties
@@ -30,5 +30,7 @@ gradleVersion = 8.0.2
 # suppress inspection "UnusedProperty"
 kotlin.stdlib.default.dependency = false
 
-ideDir = /Users/afzal/Dev/Android-Studio-Giraffe-Canary-9.app/Contents
+ideDir = /Users/afzal/Dev/Android-Studio-Giraffe-Canary-11.app/Contents
 androidJarDir = /Users/afzal/Dev/SDKs/macos-android-sdk/platforms/android-33
+
+org.gradle.daemon=false
